examples: Add hello-rust example.
* gettext-tools/examples/hello-rust/INSTALL: New file.
* gettext-tools/examples/hello-rust/autogen.sh: New file.
* gettext-tools/examples/hello-rust/autoclean.sh: New file.
* gettext-tools/examples/hello-rust/Cargo.toml.in: New file.
* gettext-tools/examples/hello-rust/src/main.rs.in: New file.
* gettext-tools/examples/hello-rust/Makefile.am: New file.
* gettext-tools/examples/hello-rust/configure.ac: New file.
* gettext-tools/examples/hello-rust/m4/Makefile.am: New file.
* gettext-tools/examples/hello-rust/po/Makefile.am: New file.
* gettext-tools/examples/hello-rust/po/LINGUAS: New file.
* gettext-tools/examples/Makefile.am (EXAMPLESFILES, EXAMPLESDIRS): Add
hello-rust.
* gettext-tools/examples/po/Makefile.am (POTFILES, SMALLPOTS): Update for
hello-rust.
(hello-rust.pot): New target.
(SMALLPOFILES_FOR_lang): Update for hello-rust.
($(srcdir)/../hello-rust/po/$(LL).po): New rule.
* gettext-tools/examples/check-examples (func_check_autoclean_all,
func_check_distclean_all, func_check_maintainerclean_all,
func_check_maintainerclean_vpath_all, func_check_dist_all,
func_check_dist_vpath_all, func_check_install_all, func_check_uninstall_all,
func_check_distcheck_all, func_check_all): Handle hello-rust as well.
(func_check): Add a more useful body.
* gettext-tools/examples/README: Mention hello-rust.
* NEWS: Likewise.

--- a/gettext-tools/examples/Makefile.am
+++ b/gettext-tools/examples/Makefile.am
@@ -1,5 +1,5 @@
 ## Makefile for the gettext-tools/examples subdirectory of GNU gettext
-## Copyright (C) 2001-2024 Free Software Foundation, Inc.
+## Copyright (C) 2001-2025 Free Software Foundation, Inc.
 ##
 ## This program is free software: you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
@@ -333,6 +333,16 @@ EXAMPLESFILES = \
   hello-csharp-forms/m4/Makefile.am \
   hello-csharp-forms/po/Makefile.am \
   \
+  hello-rust/INSTALL \
+  hello-rust/autogen.sh \
+  hello-rust/autoclean.sh \
+  hello-rust/Cargo.toml.in \
+  hello-rust/src/main.rs.in \
+  hello-rust/Makefile.am \
+  hello-rust/configure.ac \
+  hello-rust/m4/Makefile.am \
+  hello-rust/po/Makefile.am \
+  \
   hello-ruby/INSTALL \
   hello-ruby/autogen.sh \
   hello-ruby/autoclean.sh \
@@ -436,6 +446,7 @@ EXAMPLESDIRS = \
   hello-java-qtjambi \
   hello-csharp \
   hello-csharp-forms \
+  hello-rust \
   hello-ruby \
   hello-gawk \
   hello-pascal \
