examples: Assume autoconf >= 2.60.
* gettext-tools/examples/hello-clisp/configure.ac: Compute localedir based on
${datarootdir}, not ${datadir}.
* gettext-tools/examples/hello-gawk/configure.ac: Likewise.
* gettext-tools/examples/hello-guile/configure.ac: Likewise.
* gettext-tools/examples/hello-librep/configure.ac: Likewise.
* gettext-tools/examples/hello-pascal/configure.ac: Likewise.
* gettext-tools/examples/hello-perl/configure.ac: Likewise.
* gettext-tools/examples/hello-php/configure.ac: Likewise.
* gettext-tools/examples/hello-python/configure.ac: Likewise.
* gettext-tools/examples/hello-ruby/configure.ac: Likewise.
* gettext-tools/examples/hello-sh/configure.ac: Likewise.
* gettext-tools/examples/hello-smalltalk/configure.ac: Likewise.

--- a/gettext-tools/examples/hello-sh/configure.ac
+++ b/gettext-tools/examples/hello-sh/configure.ac
@@ -17,7 +17,7 @@ fi
 save_prefix="$prefix"
 prefix="$final_prefix"
 eval "datarootdir=\"${datarootdir}\""
-eval "localedir=\"${datadir}/locale\""
+eval "localedir=\"${datarootdir}/locale\""
 prefix="$save_prefix"
 AC_SUBST([localedir])
 
