--- a/libtextstyle/configure.ac
+++ b/libtextstyle/configure.ac
@@ -17,7 +17,7 @@ dnl along with this program.  If not, see <https://www.gnu.org/licenses/>.
 dnl Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.64])
-AC_INIT([libtextstyle], [dummy])
+AC_INIT([libtextstyle], [package])
 AC_CONFIG_SRCDIR([version.sh])
 AC_CONFIG_AUX_DIR([build-aux])
 . $srcdir/version.sh
